fix Dashboard style

--- a/public/style.css
+++ b/public/style.css
@@ -666,7 +666,9 @@ main {
 }
 .dashboard-reports th,
 .dashboard-reports td {
-  width: 300px;
+  width: 200px;
+  padding-top: 25px;
+
 }
 .project-work {
   max-width: 300px;
