--- a/views/partials/start-modal.ejs
+++ b/views/partials/start-modal.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-content">
       <div class="container">
-        <form method="post" id="startData">
+        <form id="startData">
           <label for="projectName"
             >Project Name
             <div class="">
@@ -34,7 +34,7 @@
             </div>
           </label>
           <div class="">
-            <button id="start-button" class="submit-btn" type="submit">
+            <button id="start-button" class="submit-btn">
               Start
             </button>
           </div>
