--- a/views/partials/add-notice-modal.ejs
+++ b/views/partials/add-notice-modal.ejs
@@ -2,7 +2,7 @@
   <div class="modal">
     <div class="modal-head">
       <div class="modal-title">Add Notice</div>
-      <div onclick="closeModal()" class="modal-close">
+      <div class="modal-close">
         <%- include("../partials/icons/close-svg"); -%>
       </div>
     </div>
