--- a/views/partials/add-project-modal.ejs
+++ b/views/partials/add-project-modal.ejs
@@ -13,6 +13,7 @@
             >Project Name
             <div class="">
               <input id="name" name="name" type="text" />
+              <p class="error name-error"></p>
             </div>
           </label>
           <label for="projectDetails">
@@ -25,6 +26,7 @@
                 rows="3"
               ></textarea>
             </div>
+            <p class="error details-error"></p>
           </label>
           <div class="">
             <button class="submit-btn" type="submit">Save</button>
