--- a/views/partials/add-leaveday-modal.ejs
+++ b/views/partials/add-leaveday-modal.ejs
@@ -11,7 +11,7 @@
         <form action="/add-leaveday" method="post">
           <label for="name">
             <div class="">
-              <select name="userId">
+              <select  name="userId">
                 <option disabled selected>Select Employee</option>
                 <% console.log(selectEmployee) %> <% selectEmployee.map(el =>
                 {%>
@@ -19,28 +19,32 @@
 
                 <% }) %>
               </select>
-            </div>
-          </label>
+              </div>
+              </label>
+              <p class="error select-error"></p>
           <label for="name"
             >Leave Reason
             <div class="">
               <input id="name" name="reason" type="text" />
+              <p class="error reason-error"></p>
             </div>
           </label>
           <label for="projectDetails">
             Select Start Date
             <div class="">
               <input type="date" name="start" />
+              <p class="error start-error"></p>
             </div>
           </label>
           <label for="projectDetails">
             Select End Date
             <div class="">
               <input type="date" name="end" />
+              <p class="error end-error"></p>
             </div>
           </label>
           <div class="">
-            <button class="submit-btn" type="submit">Save</button>
+            <button class="submit-btn">Save</button>
           </div>
         </form>
       </div>
