--- a/views/pages/holiday.ejs
+++ b/views/pages/holiday.ejs
@@ -160,7 +160,7 @@
       </div>
     </div>
   </div>
-
+<div class="scroll-table">
   <table class="project-table holiday-table">
     <thead>
       <tr>
@@ -213,6 +213,7 @@
       <% }) %>
     </tbody>
   </table>
+</div>
 
   <!--- Markup for pagination -->
 
