--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -153,6 +153,7 @@
   </div>
 
   <!-- Markup for leave days table  -->
+  <div class="scroll-table">
   <table  class="table leaveday-table">
     <thead>
       <tr>
@@ -235,6 +236,7 @@
       <% }) %> <% } %>
     </tbody>
   </table>
+</div>
   
   <!--- Markup for pagination -->
 
