--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -119,7 +119,7 @@
 
   <!-- Add user Modal -->
   <%- include("../partials/add-user-modal"); -%>
-
+  <div class="scroll-table">
   <table class="table">
     <thead>
       <tr>
@@ -201,6 +201,7 @@
       <%}) %>
     </tbody>
   </table>
+ </div>
 </div>
 
 <!-- Markup for user delete modal -->
