--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -1,48 +1,7 @@
 <%- include("../partials/header"); -%>
 
 <style>
-  .project-table thead td:nth-child(1) {
-    min-width: 60px;
-  }
-  .project-table tbody td {
-    margin-bottom: -1px;
-  }
 
-  .action-btn,
-  .update-btn,
-  .delete-btn,
-  .save-btn {
-    background-color: #103047;
-    border-radius: 10px;
-    color: #fff;
-    padding: 8px 12px;
-    border: none;
-    outline: none;
-    font-size: 12px;
-    font-weight: 500;
-    cursor: pointer;
-    width: 100%;
-  }
-  .save-btn {
-    background-color: rgb(17, 221, 17);
-  }
-  .delete-btn {
-    background-color: rgb(255, 0, 0);
-  }
-  .action-btn,
-  .save-btn {
-    width: 60px;
-  }
-  .update-btn,
-  .delete-btn,
-  .save-btn {
-    display: none;
-  }
-  .btn-group {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-  }
 </style>
 <div id="project">
   <div class="text-head">
@@ -57,6 +16,7 @@
     </div>
   </div>
   <%- include("../partials/add-project-modal"); -%>
+  <div class="scroll-table">
   <table class="project-table">
     <thead>
       <tr>
@@ -88,6 +48,7 @@
       <%}) %>
     </tbody>
   </table>
+</div>
 </div>
 
 <script src="<%= baseUrl %>/js/project.js"></script>
