--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oclock UI</title>
     <link rel="stylesheet" href="<%=baseUrl%>/profile.css" />
+    <link rel="stylesheet" href="<%=baseUrl%>/table.css"/>
     <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/modal.css" />
+    
     <link rel="stylesheet" href="<%=baseUrl%>/responsive.css" />
     <link rel="stylesheet" href="<%=baseUrl%>/dist/mc-calendar.min.css"/>
     <script src="<%=baseUrl%>/dist/mc-calendar.min.js"></script>
